--- a/public/source/css/main.styl
+++ b/public/source/css/main.styl
@@ -387,6 +387,12 @@ select
 		button:hover
 			color $main_color
 			background: #fff
+		ul
+			margin 0
+			padding 0 0 0 20px
+			li
+				list-style: decimal
+				line-height: 30px
 
 #erklaerung.active
 	opacity 1
